Avoid overlap with menu

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body, html {
     text-align: center;
     background-size: cover;
     background-position: center;
+    padding: 59.5px 0px 0px;
 }
 
 .home h1 {
@@ -86,6 +87,7 @@ body, html {
     justify-content: center;
     margin: 20px auto;
     max-width: 900px;
+    padding: 59.5px 0px 0px;
 }
 
 .portrait, .about-text {
